[package]
name = "psl"
description = "A native library for Mozilla's Public Suffix List"
version = "2.0.6-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/addr-rs/psl"
documentation = "https://docs.rs/psl"
readme = "README.md"
keywords = ["tld", "gtld", "cctld", "psl", "no_std"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
psl-types = "2.0.2"

[dev-dependencies]
psl-lexer = "0.3.1"
rspec = "1.0.0"
